# EngineBasic3D

./: .gitignore  CMakeLists.txt  README.md  build.bat
ext/: CMakeLists.txt  CloneEDL.bat
res/models/: cube.mtl
res/scene/: CubeTest.json  scene.json
res/shaders/: shader3D.mesh  shader3D.vert  shader3d.frag  shader3d.vert  shader3d_Obsolete.vert  shader_2d.frag  shader_2d.vert
src/: CMakeLists.txt  DynamicArray.h  GameComponent.h  GameObject.cpp  GameObject.h  GameTypes.h  GlobalInfo.h  IMGLoader.cpp  IMGLoader.h  JSONLoader.cpp  JSONLoader.h  MeshLoader.cpp  MeshLoader.h  Model.h  NewShader.cpp  NewShader.h  OBJLoader.cpp  OBJLoader.h  Renderable.cpp  Renderable.h  ResourceHandles.cpp  ResourceHandles.h  ResourceSystem.cpp  ResourceSystem.h  SceneLoader.cpp  SceneLoader.h  ShaderLoader.cpp  ShaderLoader.h  ShaderReflection.cpp  ShaderReflection.h  StagingBuffer.cpp  StagingBuffer.h  StorageBuffer.cpp  StorageBuffer.h  StorageBufferManager.h  UniformBufferObject.cpp  UniformBufferObject.h  Util.h  allocator.cpp  allocator.h  (+17 more)
